2011-05-23  Frank Warmerdam  <warmerdam@pobox.com>

	* csv/*.csv: Upgrade to EPSG 7.6 database.

2011-05-10  Frank Warmerdam  <warmerdam@pobox.com>

	* geo_normalize.c: Add support for cylindrical equal area from EPSG
	(http://trac.osgeo.org/gdal/ticket/4068)
	
2011-05-06  Frank Warmerdam  <warmerdam@pobox.com>

	* geo_normalize.c: Fix so that false easting/northing values read from
	a files geokeys are correctly normalized into meters in the GTIFDefn
	structure. http://trac.osgeo.org/gdal/ticket/3901

2011-04-11  Frank Warmerdam  <warmerdam@pobox.com>

	* geo_normalize.c: fix false easting/northing fetching from epsg for
	oblique mercator (EPSG:9812) (#38).

2011-03-22  Frank Warmerdam  <warmerdam@pobox.com>

	* geo_print.c: ensure there is a space between numbers to avoid
	them flowing into each other and being unparsable (#36, #37).

2011-03-09  Frank Warmerdam  <warmerdam@pobox.com>

	* geokeys.h, geo_normalize.c, geo_normalize.h: Add GeogTOWGS84GeoKey
	support as an extension to the official specification.

2011-02-24  Frank Warmerdam  <warmerdam@pobox.com>

	* geo_strtod.c, geo_normalize.c: Provide a locale-safe implementation
	of atof() and use it when parsing values from .csv files. 

	http://trac.osgeo.org/gdal/ticket/3979

2011-02-11  Frank Warmerdam  <warmerdam@pobox.com>

	* geotiff_proj4.c, geo_normalize.c: fix a few warnings for type casts, 
	and uninitialized variables.

2011-01-28  Frank Warmerdam  <warmerdam@pobox.com>

	* cpl_serv.h: Adjust EQUALN to avoid warnings on modern MSVC compiles.

2010-10-05  Frank Warmerdam  <warmerdam@pobox.com>

	* geo_new.c, geo_simpletags.c: Fix simple tags so it includes the
	'\0' char at the end of strings just like a real tiff.  Modify 
	geo_new.c so we only drop the trailing '\0' char if that is what it
	really is.  All loosely related to:
	http://trac.liblas.org/ticket/188

2010-09-21  Frank Warmerdam  <warmerdam@pobox.com>

	* configure.ac, geotiff_proj4.c: Avoid use of projects.h. (GDAL #3761)
